Clock css breaks on phone screen Fixes #1

--- a/src/styles/block_mixin.scss
+++ b/src/styles/block_mixin.scss
@@ -2,6 +2,7 @@
 
 @mixin default-block {
     background-color: $second-color;
+    aspect-ratio: 1/1;
     
     width: 20rem;
     height: 20rem;
